amount input 1 remove

--- a/screenshortWithdraw.html
+++ b/screenshortWithdraw.html
@@ -181,7 +181,7 @@
                                     </li>
                                     <li>
                                         <div><h4>Network</h4></div>
-                                        <div><h3 class="text-uppercase">bsc</h3></div>
+                                        <div><h3 class="text-uppercase">TRX</h3></div>
                                     </li>
                                     <li>
                                         <div><h4>Withdrawal Wallet</h4></div>
